// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter should render correctly when is disabled 1`] = `
Array [
  ".icon-0-2-25 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-26 {
  font-size: 24px;
}
.icon-d1-0-2-34 {
  font-size: 24px;
}
.sharedRippleEffect-0-2-15 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-16:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-17 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-18 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-19 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-20 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-21 {
    cursor: default;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-21:focus:after {  }
  .wrapper-d0-0-2-21:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-22 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-23 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-24 {
    animation: keyframes-ripple-0-2-20 300ms;
  }
  .wrapper-d4-0-2-30 {
    cursor: default;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d4-0-2-30:focus:after {  }
  .wrapper-d4-0-2-30:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-31 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-32 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-33 {
    animation: keyframes-ripple-0-2-20 300ms;
  }
  .button-0-2-9 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-9:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-9:hover:not([disabled]) {  }
  .button-0-2-9:focus:not([disabled]) {  }
  .labelContainer-0-2-10 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-11 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
  .button-d0-0-2-12 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-12:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d0-0-2-12:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d0-0-2-12:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-13 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-14 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d3-0-2-27 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-27:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d3-0-2-27:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d3-0-2-27:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d4-0-2-28 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-29 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-right: none;
    justify-content: center;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonLeft-0-2-2:disabled {
    border-right: none;
  }
  .buttonRight-0-2-3 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-left: none;
    justify-content: center;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .buttonRight-0-2-3:disabled {
    border-left: none;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 64px;
    border: 1px solid #bbbbbb;
    cursor: default;
    outline: none;
    padding: 8px;
    font-size: 16px;
    box-sizing: border-box;
    text-align: center;
    font-family: Roboto;
    background-color: transparent;
  }
  .inputBase-0-2-4:focus:not([disabled]) {
    border: 1px solid #f4ab34;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }
  .buttonLeft-d1-0-2-7 {
    height: 40px;
  }
  .buttonRight-d2-0-2-8 {
    height: 40px;
  }",
  <div>
    <div
      class=" Counter-gaya"
    >
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="wrapper-0-2-16 wrapper-d0-0-2-21"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-18 rippleContainer-d2-0-2-23"
          >
            <div
              class="ripple-0-2-17 ripple-d1-0-2-22 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonLeft-0-2-2 buttonLeft-d1-0-2-7 button-0-2-9 button-d0-0-2-12 Button-gaya"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-10 labelContainer-d1-0-2-13"
            >
              <span
                class="label-0-2-11 label-d2-0-2-14"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-25 icon-d0-0-2-26 natds-icons natds-icons-outlined-action-subtract Icon-gaya"
                data-testid="icon-outlined-action-subtract"
                role="img"
              />
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          inputmode="numeric"
          maxlength="3"
          value="0"
        />
        <div
          class="wrapper-0-2-16 wrapper-d4-0-2-30"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-18 rippleContainer-d6-0-2-32"
          >
            <div
              class="ripple-0-2-17 ripple-d5-0-2-31 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonRight-0-2-3 buttonRight-d2-0-2-8 button-0-2-9 button-d3-0-2-27 Button-gaya"
            data-testid="onIncrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-10 labelContainer-d4-0-2-28"
            >
              <span
                class="label-0-2-11 label-d5-0-2-29"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-25 icon-d1-0-2-34 natds-icons natds-icons-outlined-action-add Icon-gaya"
                data-testid="icon-outlined-action-add"
                role="img"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with default props 1`] = `
Array [
  ".icon-0-2-25 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-26 {
  font-size: 24px;
}
.icon-d1-0-2-34 {
  font-size: 24px;
}
.sharedRippleEffect-0-2-15 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-16:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-16:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-17 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-18 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-19 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-20 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-21 {
    cursor: default;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-21:focus:after {  }
  .wrapper-d0-0-2-21:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-22 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-23 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-24 {
    animation: keyframes-ripple-0-2-20 300ms;
  }
  .wrapper-d4-0-2-30 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d4-0-2-30:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-30:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-31 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-32 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-33 {
    animation: keyframes-ripple-0-2-20 300ms;
  }
  .button-0-2-9 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-9:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-9:hover:not([disabled]) {  }
  .button-0-2-9:focus:not([disabled]) {  }
  .labelContainer-0-2-10 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-11 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
  .button-d0-0-2-12 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-12:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d0-0-2-12:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d0-0-2-12:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-13 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-14 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d3-0-2-27 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-27:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d3-0-2-27:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d3-0-2-27:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d4-0-2-28 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-29 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-right: none;
    justify-content: center;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonLeft-0-2-2:disabled {
    border-right: none;
  }
  .buttonRight-0-2-3 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-left: none;
    justify-content: center;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .buttonRight-0-2-3:disabled {
    border-left: none;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 64px;
    border: 1px solid #bbbbbb;
    cursor: default;
    outline: none;
    padding: 8px;
    font-size: 16px;
    box-sizing: border-box;
    text-align: center;
    font-family: Roboto;
    background-color: transparent;
  }
  .inputBase-0-2-4:focus:not([disabled]) {
    border: 1px solid #f4ab34;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }
  .buttonLeft-d1-0-2-7 {
    height: 40px;
  }
  .buttonRight-d2-0-2-8 {
    height: 40px;
  }",
  <div>
    <div
      class=" Counter-gaya"
    >
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="wrapper-0-2-16 wrapper-d0-0-2-21"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-18 rippleContainer-d2-0-2-23"
          >
            <div
              class="ripple-0-2-17 ripple-d1-0-2-22 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonLeft-0-2-2 buttonLeft-d1-0-2-7 button-0-2-9 button-d0-0-2-12 Button-gaya"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-10 labelContainer-d1-0-2-13"
            >
              <span
                class="label-0-2-11 label-d2-0-2-14"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-25 icon-d0-0-2-26 natds-icons natds-icons-outlined-action-subtract Icon-gaya"
                data-testid="icon-outlined-action-subtract"
                role="img"
              />
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          inputmode="numeric"
          maxlength="3"
          value="0"
        />
        <div
          class="wrapper-0-2-16 wrapper-d4-0-2-30"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-18 rippleContainer-d6-0-2-32"
          >
            <div
              class="ripple-0-2-17 ripple-d5-0-2-31 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonRight-0-2-3 buttonRight-d2-0-2-8 button-0-2-9 button-d3-0-2-27 Button-gaya"
            data-testid="onIncrement-btn"
            type="button"
          >
            <div
              class="labelContainer-0-2-10 labelContainer-d4-0-2-28"
            >
              <span
                class="label-0-2-11 label-d5-0-2-29"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-25 icon-d1-0-2-34 natds-icons natds-icons-outlined-action-add Icon-gaya"
                data-testid="icon-outlined-action-add"
                role="img"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with label 1`] = `
Array [
  ".labelContainer-0-2-9 {
  color: #000000;
  font-family: \\"Roboto\\", Arial;
}
.icon-0-2-26 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-27 {
  font-size: 24px;
}
.icon-d1-0-2-35 {
  font-size: 24px;
}
.sharedRippleEffect-0-2-16 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-17 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-17:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-17:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-18 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-19 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-20 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-21 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-22 {
    cursor: default;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d0-0-2-22:focus:after {  }
  .wrapper-d0-0-2-22:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-23 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-24 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-25 {
    animation: keyframes-ripple-0-2-21 300ms;
  }
  .wrapper-d4-0-2-31 {
    cursor: pointer;
    display: inline-block;
    align-self: start;
  }
  .wrapper-d4-0-2-31:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-31:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-32 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-33 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-34 {
    animation: keyframes-ripple-0-2-21 300ms;
  }
  .button-0-2-10 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-10:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-10:hover:not([disabled]) {  }
  .button-0-2-10:focus:not([disabled]) {  }
  .labelContainer-0-2-11 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-12 {
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
  .button-d0-0-2-13 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-13:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d0-0-2-13:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d0-0-2-13:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d1-0-2-14 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-15 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d3-0-2-28 {
    background-color: #FFFFFF00;
    border: 1px solid #f4ab34;
    box-shadow: none;
    color: #000000;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-28:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #bbbbbb;
    color: #777777;
  }
  .button-d3-0-2-28:hover:not([disabled]) {
    background-color: #bbbbbb;
    border: 1px solid #f4ab34;
    color: #333333;
    opacity: unset;
  }
  .button-d3-0-2-28:focus:not([disabled]) {
    background-color: #777777;
    border: 1px solid #f4ab34;
    color: #ffffff;
  }
  .labelContainer-d4-0-2-29 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-30 {
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .buttonGroup-0-2-1 {
    width: fit-content;
    display: flex;
    margin-top: 4px;
    border-radius: 4px;
  }
  .buttonGroup-0-2-1 button {  }
  .buttonLeft-0-2-2 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-right: none;
    justify-content: center;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .buttonLeft-0-2-2:disabled {
    border-right: none;
  }
  .buttonRight-0-2-3 {
    width: 32px;
    border: 1px solid #bbbbbb;
    display: flex;
    align-items: center;
    border-left: none;
    justify-content: center;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .buttonRight-0-2-3:disabled {
    border-left: none;
  }
  .inputBase-0-2-4 {
    color: #000000;
    width: 64px;
    border: 1px solid #bbbbbb;
    cursor: default;
    outline: none;
    padding: 8px;
    font-size: 16px;
    box-sizing: border-box;
    text-align: center;
    font-family: Roboto;
    background-color: transparent;
  }
  .inputBase-0-2-4:focus:not([disabled]) {
    border: 1px solid #f4ab34;
  }
  .labelText-0-2-5 {
    color: #777777;
    font-size: 14px;
    font-family: Roboto, Arial;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0.11px;
  }
  .buttonGroup-d0-0-2-6 {
    height: 40px;
  }
  .buttonGroup-d0-0-2-6 button {
    width: 32px;
  }
  .buttonLeft-d1-0-2-7 {
    height: 40px;
  }
  .buttonRight-d2-0-2-8 {
    height: 40px;
  }",
  <div>
    <div
      class=" Counter-gaya"
    >
      <label
        class="labelText-0-2-5 labelContainer-0-2-9"
      >
        label
      </label>
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-6"
      >
        <div
          class="wrapper-0-2-17 wrapper-d0-0-2-22"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-19 rippleContainer-d2-0-2-24"
          >
            <div
              class="ripple-0-2-18 ripple-d1-0-2-23 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonLeft-0-2-2 buttonLeft-d1-0-2-7 button-0-2-10 button-d0-0-2-13 Button-gaya"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-11 labelContainer-d1-0-2-14"
            >
              <span
                class="label-0-2-12 label-d2-0-2-15"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-26 icon-d0-0-2-27 natds-icons natds-icons-outlined-action-subtract Icon-gaya"
                data-testid="icon-outlined-action-subtract"
                role="img"
              />
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          inputmode="numeric"
          maxlength="3"
          value="0"
        />
        <div
          class="wrapper-0-2-17 wrapper-d4-0-2-31"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-19 rippleContainer-d6-0-2-33"
          >
            <div
              class="ripple-0-2-18 ripple-d5-0-2-32 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="buttonRight-0-2-3 buttonRight-d2-0-2-8 button-0-2-10 button-d3-0-2-28 Button-gaya"
            data-testid="onIncrement-btn"
            type="button"
          >
            <div
              class="labelContainer-0-2-11 labelContainer-d4-0-2-29"
            >
              <span
                class="label-0-2-12 label-d5-0-2-30"
              >
                 
              </span>
              <i
                aria-hidden="true"
                class=" icon-0-2-26 icon-d1-0-2-35 natds-icons natds-icons-outlined-action-add Icon-gaya"
                data-testid="icon-outlined-action-add"
                role="img"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;
